--- a/app/src/main/res/layout/screen_favorites.xml
+++ b/app/src/main/res/layout/screen_favorites.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ru.dmisb.advices.features.favorits.FavoritesView
         style="@style/CustomFullExpand"
@@ -9,7 +10,12 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/favorites_list"
-            style="@style/CustomFullExpand"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </ru.dmisb.advices.features.favorits.FavoritesView>
 
